bitflip_client/tests/snapshots/banks_client__initialize_config_test.snap
---
source: bitflip_client/tests/banks_client.rs
expression: config_state_account
---
authority: EjxoynXa5jTq4MyZzWtTz6Uq8UHQDxebkWhvEkDXoZxH
lamportsPerBit: 100000
bump: 254
treasuryBump: 255
mintBump: 0
bitsIndex: 0
