bitflip_client/tests/snapshots/banks_client__initialize_token-2.snap
---
source: bitflip_client/tests/banks_client.rs
expression: token_account
---
type: account
info:
  mint: "[mint:pubkey]"
  owner: "[treasury:pubkey]"
  tokenAmount:
    uiAmount: 1000000000
    decimals: 6
    amount: "1000000000000000"
    uiAmountString: "1000000000"
  state: initialized
  isNative: false
  extensions:
    - extension: immutableOwner
