bitflip_client/tests/snapshots/banks_client__set_bits_on-2.snap
---
source: bitflip_client/tests/banks_client.rs
expression: bits_meta_account
---
startTime: "[timestamp]"
flips: 1
"on": 1
"off": 1048575
index: 0
bump: 254
sections: 16
