bitflip_client/tests/snapshots/banks_client__set_bits_on-3.snap
---
source: bitflip_client/tests/banks_client.rs
expression: treasury_ui_account
---
lamports: 990880
data:
  - ""
  - base58
owner: "11111111111111111111111111111111"
executable: false
rentEpoch: 18446744073709551615
space: 0
