bitflip_client/tests/snapshots/banks_client__set_bits_on.snap
---
source: bitflip_client/tests/banks_client.rs
expression: parsed_payer_token_account
---
type: account
info:
  mint: "[mint:pubkey]"
  owner: "[player:pubkey]"
  tokenAmount:
    uiAmount: 1
    decimals: 6
    amount: "1000000"
    uiAmountString: "1"
  state: initialized
  isNative: false
  extensions:
    - extension: immutableOwner
